Fix problem with sticking out content (#1144)

--- a/oscm-portal/WebContent/marketplace/scss/mp.scss
+++ b/oscm-portal/WebContent/marketplace/scss/mp.scss
@@ -524,6 +524,10 @@ form .formHighlight div.div-for-input {
   background-position: -13px -11px;
 }
 
+.d-flow-root {
+  display: flow-root !important;
+}
+
 /*
  ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
  ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ---- ----
